can overflow: hidden again

--- a/resources/assets/less/bem/user-card.less
+++ b/resources/assets/less/bem/user-card.less
@@ -37,6 +37,8 @@
   background-color: @background-color;
   border-radius: @card-border-radius;
 
+  overflow: hidden;
+
   &--list {
     height: @avatar-size--list;
     border-radius: @avatar-border-radius;
