Combine admin title and profile page title

--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -173,22 +173,13 @@
       margin-bottom: 10px;
       color: white;
 
-      h1, h2, h3, h4 {
+      h1, h3, h4 {
         font-style: normal;
         color: white;
       }
 
       h1 {
         font-size: 28px;
-      }
-
-      h2 {
-        font-size: 16px;
-        margin-bottom: 10px;
-        padding-bottom: 5px;
-        border-bottom: 2px solid @osu-colour-h1;
-        width: max-content;
-        max-width: 100%;
       }
 
       h3 {
