--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -317,6 +317,7 @@
 @import "bem/supporter-icon";
 @import "bem/supporter-promo";
 @import "bem/textual-button";
+@import "bem/title";
 @import "bem/tooltip-achievement";
 @import "bem/tooltip-beatmap";
 @import "bem/tooltip-default";
