--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -185,6 +185,7 @@
 @import "bem/medals-group";
 @import "bem/mod";
 @import "bem/mods";
+@import "bem/modding-profile-vote-card";
 @import "bem/mp-history-content";
 @import "bem/mp-history-event";
 @import "bem/mp-history-events";
