Handle empty sections and add link to 'see more'

--- a/resources/assets/less/bem/page-extra.less
+++ b/resources/assets/less/bem/page-extra.less
@@ -151,8 +151,7 @@
     font-style: normal;
     font-weight: 300; // semibold?
     color: white;
-    margin-bottom: 20px;
-    text-transform: capitalize; //TODO: remove
+    margin: 20px 0px;
 
     &::before {
       content: ' ';
