--- a/resources/assets/less/colors.less
+++ b/resources/assets/less/colors.less
@@ -88,6 +88,8 @@
 @osu-colour-p: hsl(var(--base-hue), 100%, 50%);
 @osu-colour-h1: hsl(var(--base-hue), 100%, 70%);
 @osu-colour-h2: hsl(var(--base-hue), 50%, 45%);
+@osu-colour-c1: hsl(var(--base-hue), 40%, 99%);
+@osu-colour-c2: hsl(var(--base-hue), 40%, 80%);
 @osu-colour-l1: hsl(var(--base-hue), 40%, 70%);
 @osu-colour-l2: hsl(var(--base-hue), 40%, 60%);
 @osu-colour-l3: hsl(var(--base-hue), 40%, 50%);
