--- a/resources/assets/less/bem/pagination-v2.less
+++ b/resources/assets/less/bem/pagination-v2.less
@@ -21,11 +21,10 @@
 
   padding: 8px;
   color: @osu-colour-l2;
-  list-style: none;
-  margin: 0;
   justify-content: center;
   font-size: @font-size--normal;
   display: flex;
+  align-items: center;
 
   &__item {
     margin: 2px;
@@ -67,12 +66,28 @@
       padding-left: 15px;
       padding-right: 15px;
       background-color: @osu-colour-b4;
-      text-transform: uppercase;
 
       // TODO: remove after forum/store restyle
       .@{_top}--light-bg & {
         background-color: .osu-hsla(@osu-colour-l1, 0.2)[@hsla];
       }
+    }
+  }
+
+  &__pages {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    flex-wrap: wrap;
+  }
+
+  &__quick {
+    white-space: nowrap;
+    text-transform: uppercase;
+
+    &--next {
+      order: 3;
     }
   }
 }
