--- a/resources/assets/less/bem/pagination-v2.less
+++ b/resources/assets/less/bem/pagination-v2.less
@@ -19,12 +19,29 @@
 .pagination-v2 {
   @_top: pagination-v2;
 
-  padding: 8px;
+  padding: 10px 0;
   color: @osu-colour-l2;
   justify-content: center;
   font-size: @font-size--normal;
   display: flex;
   align-items: center;
+
+  @media @desktop {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  &__col {
+    display: flex;
+    margin: 2px;
+
+    &--pages {
+      list-style: none;
+      margin: -2px;
+      padding: 0;
+      flex-wrap: wrap;
+    }
+  }
 
   &__item {
     margin: 2px;
@@ -63,6 +80,8 @@
     }
 
     &--quick {
+      white-space: nowrap;
+      text-transform: uppercase;
       padding-left: 15px;
       padding-right: 15px;
       background-color: @osu-colour-b4;
@@ -71,23 +90,6 @@
       .@{_top}--light-bg & {
         background-color: .osu-hsla(@osu-colour-l1, 0.2)[@hsla];
       }
-    }
-  }
-
-  &__pages {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    flex-wrap: wrap;
-  }
-
-  &__quick {
-    white-space: nowrap;
-    text-transform: uppercase;
-
-    &--next {
-      order: 3;
     }
   }
 }
