--- a/resources/assets/less/bem/sort.less
+++ b/resources/assets/less/bem/sort.less
@@ -33,8 +33,7 @@
   }
 
   &--forum-topics {
-    padding: 10px 40px;
-    background: @osu-colour-b4;
+    margin-top: 10px;
   }
 
   &--user-list {
