--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -60,6 +60,9 @@
 // ┐(ﾟ ヮﾟ)┌
 @padding-wiki-desktop: 40px;
 
+// ┐(ﾟ ヮﾟ)┌
+@padding-big-v4: 50px;
+
 @gutter-profile-page: 20px;
 @gutter-profile-page-desktop: @gutter-desktop;
 @padding-profile-page: 10px;
