--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -136,12 +136,14 @@
 @import "bem/form";
 @import "bem/forum-category-header";
 @import "bem/forum-cover-admin-item";
-@import "bem/forum-pippi";
+@import "bem/forum-item";
+@import "bem/forum-list";
 @import "bem/forum-poll";
 @import "bem/forum-poll-row";
 @import "bem/forum-post";
 @import "bem/forum-post-actions";
 @import "bem/forum-post-content";
+@import "bem/forum-title";
 @import "bem/forum-topic-entry";
 @import "bem/forum-topic-feature-vote";
 @import "bem/forum-topic-floating-header";
@@ -159,8 +161,10 @@
 @import "bem/game-mode-link";
 @import "bem/grid";
 @import "bem/grid-cell";
+@import "bem/header-nav-v4";
 @import "bem/header-search-box";
 @import "bem/header-v3";
+@import "bem/header-v4";
 @import "bem/icon-fancy";
 @import "bem/icon-stack";
 @import "bem/js-accordion";
