--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -17,16 +17,6 @@
  */
 
 .osu-page {
-  .width(@extra-margin: 0px) {
-    width: calc(100% - (@extra-margin * 2));
-    max-width: (@container-sm - @extra-margin * 2);
-  }
-
-  .width-desktop(@extra-margin: 0px) {
-    width: calc(100% - ((@extra-margin + @grid-gutter-width) * 2));
-    max-width: (@container-sm - @extra-margin * 2);
-  }
-
   align-self: center;
   margin-left: auto;
   margin-right: auto;
@@ -39,9 +29,9 @@
     margin-bottom: 10px;
   }
 
-  .width();
+  .page-width();
   @media @desktop {
-    .width-desktop();
+    .page-width-desktop();
   }
 
   &--account-edit-header {
@@ -78,7 +68,7 @@
 
   &--contest {
     @media @desktop {
-      .width-desktop(20px);
+      .page-width-desktop(20px);
       margin-bottom: 10px;
     }
   }
@@ -88,15 +78,21 @@
   }
 
   &--download {
-    .width(20px);
+    .page-width(20px);
     .default;
 
     display: flex;
     flex-direction: column;
 
     @media @desktop {
-      .width-desktop(20px);
+      .page-width-desktop(20px);
     }
+  }
+
+  &--forum {
+    background-color: @osu-colour-b5;
+    color: @osu-colour-c1;
+    margin-bottom: 10px;
   }
 
   &--forum-compact {
@@ -110,10 +106,6 @@
     background-color: #fff;
     padding: 20px;
     margin-bottom: 5px;
-  }
-
-  &--forum-pippi {
-    margin-bottom: 10px;
   }
 
   &--full {
@@ -174,7 +166,7 @@
     .inner-shadow-top();
 
     @media @desktop {
-      .width-desktop(20px);
+      .page-width-desktop(20px);
     }
   }
 
@@ -185,7 +177,7 @@
 
   &--small {
     @media @desktop {
-      .width-desktop(20px);
+      .page-width-desktop(20px);
     }
   }
 
@@ -196,7 +188,7 @@
 
   &--tournament {
     @media @desktop {
-      .width-desktop(20px);
+      .page-width-desktop(20px);
       margin-bottom: 10px;
     }
   }
