--- a/resources/assets/less/bem/stg-block.less
+++ b/resources/assets/less/bem/stg-block.less
@@ -104,7 +104,7 @@
 
     &--sub-1 {
       margin-top: 0;
-      color: @osu-colour-b1;
+      color: @osu-colour-f1;
     }
 
     &--sub-2 {
@@ -114,7 +114,8 @@
 
   &__title {
     font-size: @font-size--title;
-    color: @osu-colour-l1;
+    color: @osu-colour-orange-1;
+    font-weight: 100;
     font-style: italic;
     margin: 0 0 30px;
     text-align: center;
