--- a/resources/assets/less/bem/stg-perk.less
+++ b/resources/assets/less/bem/stg-perk.less
@@ -86,7 +86,7 @@
     width: 1050px;
     background-position: top center;
     height: 320px;
-    border-radius: 35px;
+    border-radius: 10px;
     display: inline-block;
   }
 
@@ -96,7 +96,7 @@
     width: 1050px;
     background-position: top center;
     height: 320px;
-    border-radius: 35px;
+    border-radius: 10px;
     display: inline-block;
 
     margin: 20px;
@@ -170,7 +170,7 @@
     .@{top}--customisation & {
       width: 300px;
       background-color: .osu-hsla(@osu-colour-b4, 0.8)[@hsla];
-      border-radius: 35px;
+      border-radius: 10px;
       padding: 10px;
       align-self: center;
       margin-right: 30px;
@@ -181,7 +181,7 @@
   &__text {
     padding: 20px 10px;
     font-style: italic;
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
 
     .@{top}--big & {
       margin-top: -30px;
