Update colours to use basic palette

--- a/resources/assets/less/bem/stg-perk.less
+++ b/resources/assets/less/bem/stg-perk.less
@@ -154,15 +154,15 @@
   }
 
   &__icon-bg {
-    color: @blue-dark;
+    color: @osu-colour-blue-3;
     .@{top}--feature & {
-      color: @green;
+      color: @osu-colour-lime-3;
     }
     .@{top}--big & {
-      color: @green;
+      color: @osu-colour-lime-3;
     }
     .@{top}--customisation & {
-      color: @green;
+      color: @osu-colour-lime-3;
     }
   }
 
