--- a/resources/assets/less/colors.less
+++ b/resources/assets/less/colors.less
@@ -111,6 +111,11 @@
 // "Basic" Colour Theme (as of 2019)
 //
 
+// osu!Pink
+@osu-colour-pink-hue: 333;
+@osu-colour-pink-1: hsl(@osu-colour-pink-hue, 100%, 70%);
+@osu-colour-pink-2: hsl(@osu-colour-pink-hue, 80%, 60%);
+@osu-colour-pink-3: hsl(@osu-colour-pink-hue, 60%, 50%);
 // Purple
 @osu-colour-purple-hue: 255;
 @osu-colour-purple-1: hsl(@osu-colour-purple-hue, 100%, 70%);
