--- a/resources/assets/less/bem/stg-status.less
+++ b/resources/assets/less/bem/stg-status.less
@@ -87,7 +87,7 @@
 
   &__progress-bar-fill {
     height: 100%;
-    background-color: @pink;
+    background-color: @osu-colour-pink-1;
     background-size: 40px 40px;
     border-radius: 25px;
     opacity: 0;
