Add margin for cover button on mobile

--- a/resources/assets/less/bem/profile-page-toggle.less
+++ b/resources/assets/less/bem/profile-page-toggle.less
@@ -24,4 +24,10 @@
   .link-hover({
     background-color: @osu-colour-b1;
   });
+
+  &--cover {
+    @media @mobile {
+      top: 45px;
+    }
+  }
 }
