Add disclaimer for uploaded images

--- a/resources/assets/less/bem/account-edit-entry.less
+++ b/resources/assets/less/bem/account-edit-entry.less
@@ -97,6 +97,13 @@
     }
   }
 
+  &__disclaimer {
+    display: inline-block;
+    margin-top: 10px;
+    color: white;
+    font-size: @font-size--normal;
+  }
+
   &__drop-overlay {
     .full-size();
     .center-content();
