Add beatmap information button to discussions

--- a/resources/assets/less/bem/beatmap-discussions-header-bottom.less
+++ b/resources/assets/less/bem/beatmap-discussions-header-bottom.less
@@ -65,4 +65,12 @@
       margin: 10px 10px 10px 0;
     }
   }
+
+  &__info-page {
+    margin-bottom: 10px;
+
+    @media @desktop {
+      margin: 0 10px 10px 0;
+    }
+  }
 }
