--- a/resources/assets/less/colors.less
+++ b/resources/assets/less/colors.less
@@ -126,11 +126,11 @@
 @osu-colour-blue-1: hsl(@osu-colour-blue-hue, 100%, 70%);
 @osu-colour-blue-2: hsl(@osu-colour-blue-hue, 80%, 60%);
 @osu-colour-blue-3: hsl(@osu-colour-blue-hue, 60%, 50%);
-// Mint
-@osu-colour-mint-hue: 125;
-@osu-colour-mint-1: hsl(@osu-colour-mint-hue, 100%, 70%);
-@osu-colour-mint-2: hsl(@osu-colour-mint-hue, 80%, 60%);
-@osu-colour-mint-3: hsl(@osu-colour-mint-hue, 60%, 50%);
+// Green
+@osu-colour-green-hue: 125;
+@osu-colour-green-1: hsl(@osu-colour-green-hue, 100%, 70%);
+@osu-colour-green-2: hsl(@osu-colour-green-hue, 80%, 60%);
+@osu-colour-green-3: hsl(@osu-colour-green-hue, 60%, 50%);
 // Lime
 @osu-colour-lime-hue: 90;
 @osu-colour-lime-1: hsl(@osu-colour-lime-hue, 100%, 70%);
