More mobile fixes and add menu

--- a/resources/assets/less/bem/forum-topic-entry.less
+++ b/resources/assets/less/bem/forum-topic-entry.less
@@ -164,6 +164,7 @@
     font-size: @font-size--title-small;
     font-weight: 600;
     color: @osu-colour-c1;
+    word-wrap: break-word;
 
     .link-hover({
       color: @osu-colour-c1;
