--- a/resources/assets/less/bem/title.less
+++ b/resources/assets/less/bem/title.less
@@ -28,6 +28,10 @@
 
   border-bottom: 2px solid @osu-colour-h1;
 
+  &--forums-show {
+    margin-bottom: 0;
+  }
+
   &--page-extra {
     font-weight: bold;
 
