--- a/resources/assets/less/bem/forum-list.less
+++ b/resources/assets/less/bem/forum-list.less
@@ -30,14 +30,35 @@
   }
 
   &__buttons {
-    display: flex;
     flex: wrap;
     margin: -2px -5px;
+    display: none;
+
+    @media @desktop {
+      display: flex;
+    }
+  }
+
+  &__menu {
+    margin-left: auto;
+
+    @media @desktop {
+      display :none;
+    }
+  }
+
+  &__menu-button {
+    .reset-input();
+    .circle(30px);
+    .center-content();
+    .default-text-shadow();
+    background-color: @osu-colour-blue-2;
   }
 
   &__header {
     display: flex;
     align-items: flex-end;
+    margin-bottom: 10px;
   }
 
   &__items {
