--- a/resources/assets/less/bem/simple-menu.less
+++ b/resources/assets/less/bem/simple-menu.less
@@ -44,6 +44,13 @@
     margin-top: 5px;
   }
 
+  &--forum-list {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    margin-top: 5px;
+  }
+
   &--forum-topic-watch {
     position: absolute;
     bottom: 100%;
