Remove unused styles and move stuff around

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -136,6 +136,7 @@
 @import "bem/form";
 @import "bem/forum-category-header";
 @import "bem/forum-cover-admin-item";
+@import "bem/forum-issue-icon";
 @import "bem/forum-item";
 @import "bem/forum-list";
 @import "bem/forum-poll";
