--- a/resources/assets/less/bem/forum-issue-icon.less
+++ b/resources/assets/less/bem/forum-issue-icon.less
@@ -16,41 +16,38 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.forum__user-flag {
-  .default-box-shadow();
-  .default-border-radius();
+.forum-issue-icon {
+  .icon-bg();
+  .circle(20px);
+  .center-content();
 
-  height: 20px;
-}
+  font-size: 10px;
+  color: #fff;
+  text-shadow: 0 0 2px #000;
 
-.forum__user-flag--large {
-  height: 24px;
-}
+  margin: 0 5px;
 
-.forum__user-flag--small {
-  height: 13px;
-
-  box-shadow: none;
-  border-radius: 0;
-}
-
-.forum__user-flag--country {
-  width: 30px;
-
-  &.forum__user-flag--large {
-    width: 35px;
+  &--added {
+    background-color: @pink-dark;
   }
 
-  &.forum__user-flag--small {
-    width: 25px;
+  &--assigned {
+    background-color: @purple-dark;
   }
-}
 
-.forum__user-icon--large {
-  .circle(30px);
-  font-size: 14px;
-}
+  &--confirmed {
+    background-color: @blue-dark;
+  }
 
-.forum__user-icon--supporter {
-  background-color: @pink;
+  &--duplicate {
+    background-color: @yellow-dark;
+  }
+
+  &--invalid {
+    background-color: darken(@red, 20%);
+  }
+
+  &--resolved {
+    background-color: @green-dark;
+  }
 }
