Remove unused stg-header and rename stg-* to support-*

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -296,12 +296,10 @@
 @import "bem/status-info";
 @import "bem/status-map";
 @import "bem/status-recent";
-@import "bem/stg-block";
-@import "bem/stg-header";
-@import "bem/stg-heart";
-@import "bem/stg-perk";
-@import "bem/stg-quote";
-@import "bem/stg-status";
+@import "bem/support-heart";
+@import "bem/support-perk";
+@import "bem/support-quote";
+@import "bem/support-status";
 @import "bem/sticky-header";
 @import "bem/sticky-header-breadcrumbs";
 @import "bem/store-cart-footer";
@@ -316,6 +314,7 @@
 @import "bem/store-slider";
 @import "bem/store-supporter-tag";
 @import "bem/store-text";
+@import "bem/support";
 @import "bem/support-osu-popup";
 @import "bem/supporter-icon";
 @import "bem/supporter-promo";
