--- a/resources/assets/less/bem/support-quote.less
+++ b/resources/assets/less/bem/support-quote.less
@@ -16,7 +16,7 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.stg-quote {
+.support-quote {
   .default-box-shadow();
   .inner-shadow-top();
   padding: 30px 40px 15px 90px;
