--- a/resources/assets/less/bem/support.less
+++ b/resources/assets/less/bem/support.less
@@ -16,7 +16,7 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.stg-block {
+.support {
   background: @osu-colour-b5;
   padding: 30px;
 
