--- a/resources/assets/less/bem/support-heart.less
+++ b/resources/assets/less/bem/support-heart.less
@@ -16,29 +16,29 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.stg-heart {
+.support-heart {
   @animation-rate: 937.5ms; // 64bpm (aka 128bpm at half-time)
 
-  @keyframes stg-circle-pulsate {
+  @keyframes support-circle-pulsate {
     0%   { transform: scale(0.9); }
     20%  { transform: scale(1.0); }
     100% { transform: scale(0.9); }
   }
 
-  @keyframes stg-circle-glow {
+  @keyframes support-circle-glow {
     // this is basically .default-box-shadow() animated to have a less intense shadow with an added glow when pulsating
     0%   { box-shadow: 0 1px @box-shadow-radius @box-shadow-color, inset 0 0 0px white;  }
     20%  { box-shadow: 0 1px @box-shadow-radius lighten(@box-shadow-color, 70%), inset 0 0 5px white;  }
     80%  { box-shadow: 0 1px @box-shadow-radius @box-shadow-color, inset 0 0 0px white;  }
   }
 
-  @keyframes stg-heart-pulsate {
+  @keyframes support-heart-pulsate {
     0%   { transform: scale(1.0); }
     20%  { transform: scale(1.2); }
     100% { transform: scale(1.0); }
   }
 
-  @keyframes stg-heart-glow {
+  @keyframes support-heart-glow {
     0%   { text-shadow: 0 0 0px white; }
     20%  { text-shadow: 0 0 10px white; }
     80%  { text-shadow: 0 0 0px white; }
@@ -85,11 +85,11 @@
   &--active {
     opacity: 1;
     background-color: @pink;
-    animation: stg-circle-pulsate @animation-rate infinite ease-in-out, stg-circle-glow @animation-rate infinite ease-in-out;
+    animation: support-circle-pulsate @animation-rate infinite ease-in-out, support-circle-glow @animation-rate infinite ease-in-out;
     animation-fill-mode: none;
 
     &::after {
-      animation: stg-heart-pulsate @animation-rate infinite ease-in-out, stg-heart-glow @animation-rate infinite ease-in-out;
+      animation: support-heart-pulsate @animation-rate infinite ease-in-out, support-heart-glow @animation-rate infinite ease-in-out;
     }
   }
 }
