Fix hero styling

--- a/resources/assets/less/bem/support-heart.less
+++ b/resources/assets/less/bem/support-heart.less
@@ -84,7 +84,7 @@
 
   &--active {
     opacity: 1;
-    background-color: @pink;
+    background-color: @osu-colour-pink-1;
     animation: support-circle-pulsate @animation-rate infinite ease-in-out, support-circle-glow @animation-rate infinite ease-in-out;
     animation-fill-mode: none;
 
