Correct disable styling

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -175,6 +175,11 @@
       background-color: @osu-colour-blue-3;
       color: @osu-colour-c1;
     }
+
+    &[disabled] {
+      background-color: @osu-colour-b3;
+      color: @osu-colour-f1;
+    }
   }
 
   &--forum-reply {
