Fix page structure and css class names

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -296,10 +296,6 @@
 @import "bem/status-info";
 @import "bem/status-map";
 @import "bem/status-recent";
-@import "bem/support-heart";
-@import "bem/support-perk";
-@import "bem/support-quote";
-@import "bem/support-status";
 @import "bem/sticky-header";
 @import "bem/sticky-header-breadcrumbs";
 @import "bem/store-cart-footer";
@@ -314,10 +310,15 @@
 @import "bem/store-slider";
 @import "bem/store-supporter-tag";
 @import "bem/store-text";
-@import "bem/support";
 @import "bem/support-osu-popup";
+@import "bem/supporter";
+@import "bem/supporter-eyecatch";
+@import "bem/supporter-heart";
 @import "bem/supporter-icon";
+@import "bem/supporter-perk";
 @import "bem/supporter-promo";
+@import "bem/supporter-quote";
+@import "bem/supporter-status";
 @import "bem/textual-button";
 @import "bem/tooltip-achievement";
 @import "bem/tooltip-beatmap";
