--- a/resources/assets/less/bem/supporter-heart.less
+++ b/resources/assets/less/bem/supporter-heart.less
@@ -16,7 +16,7 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.support-heart {
+.supporter-heart {
   @animation-rate: 937.5ms; // 64bpm (aka 128bpm at half-time)
 
   @keyframes support-circle-pulsate {
