--- a/resources/assets/less/bem/supporter-perk.less
+++ b/resources/assets/less/bem/supporter-perk.less
@@ -16,8 +16,8 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.support-perk {
-  @top: support-perk;
+.supporter-perk {
+  @top: supporter-perk;
   flex: none;
   margin: 5px;
   overflow: hidden;
@@ -37,7 +37,6 @@
   }
 
   &--first {
-    margin-top: -50px;
     background: @osu-colour-b4;
   }
 
