--- a/resources/assets/less/bem/supporter-status.less
+++ b/resources/assets/less/bem/supporter-status.less
@@ -16,8 +16,8 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.support-status {
-  @top: support-status;
+.supporter-status {
+  @top: supporter-status;
   @animation-rate: 937.5ms; // 64bpm (aka 128bpm at half-time)
   color: white;
 
