--- a/resources/assets/less/bem/supporter.less
+++ b/resources/assets/less/bem/supporter.less
@@ -16,23 +16,42 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.support-quote {
-  .default-box-shadow();
-  .inner-shadow-top();
-  padding: 30px 40px 15px 90px;
-  background-color: @osu-colour-b4;
-  color: white;
-  font-size: @font-size--normal;
-  font-style: italic;
+.supporter {
+  &__block {
+    background: @osu-colour-b5;
+    padding: 30px;
 
-  &__content {
-    margin: 0;
-    padding: 0;
-    border: none;
+    &--image {
+      background-color: @osu-colour-b4;
+    }
+
+    &--features {
+      background-color: @osu-colour-b3;
+    }
+
+    &--features-2 {
+      background-color: @osu-colour-b5;
+    }
   }
 
-  &__signature {
-    margin-top: 10px;
-    text-align: right;
+  &__perk {
+    margin: -5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    &--imglist {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  &__title {
+    font-size: @font-size--title;
+    color: @osu-colour-orange-1;
+    font-weight: 100;
+    font-style: italic;
+    margin: 0 0 30px;
+    text-align: center;
   }
 }
