Split support-the-game into smaller blades

--- a/resources/assets/less/bem/supporter-perk-item.less
+++ b/resources/assets/less/bem/supporter-perk-item.less
@@ -16,8 +16,8 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.supporter-perk {
-  @top: supporter-perk;
+.supporter-perk-item {
+  @top: supporter-perk-item;
   flex: none;
   margin: 5px;
   overflow: hidden;
@@ -36,10 +36,6 @@
     padding: 20px;
   }
 
-  &--first {
-    background: @osu-colour-b4;
-  }
-
   &--flipped {
     flex-direction: row-reverse;
   }
@@ -51,7 +47,7 @@
     padding: 20px;
   }
 
-  &--img {
+  &--image-group {
     display: flex;
     text-align: right;
     align-items: center;
