--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -315,7 +315,8 @@
 @import "bem/supporter-eyecatch";
 @import "bem/supporter-heart";
 @import "bem/supporter-icon";
-@import "bem/supporter-perk";
+@import "bem/supporter-perk-item";
+@import "bem/supporter-perk-list";
 @import "bem/supporter-promo";
 @import "bem/supporter-quote";
 @import "bem/supporter-status";
