Redo dom structure/bem classes to make more sense

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -185,7 +185,7 @@
 @import "bem/logo-menu";
 @import "bem/medals-group";
 @import "bem/mod";
-@import "bem/modding-profile";
+@import "bem/modding-profile-list";
 @import "bem/modding-profile-vote-card";
 @import "bem/mods";
 @import "bem/mp-history-content";
