--- a/resources/assets/less/bem/forum-item.less
+++ b/resources/assets/less/bem/forum-item.less
@@ -50,6 +50,9 @@
   &__details {
     margin: 5px;
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   &__latest-post {
